--- a/SuperAdmin/Pract Registration/html/PractPage3.html
+++ b/SuperAdmin/Pract Registration/html/PractPage3.html
@@ -1,57 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="../css/pracStyle3.css">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
+
 <body>
-<header>
-    <img class="logo" src="../../../photos/logo.png" alt="img">
-    <p>HIC</p>
-</header>
-<main>
-    <div class="left">
-        <div class="up"><img  src="../../../photos/up.png" alt=""></div>
-        <div class="down"><img  src="../../../photos/BackGround_Green.png" alt=""></div>
-        <div class="doc"> <img  src="../../../photos/bjishk.png" alt=""></div>
-    </div>
-    <form id="final-form" method="get">
-        <div class="right">
-            <p class="reg">Registration</p>
-            <p class="font">E-mail</p>
-            <div class="mail">
-                <label for="email"></label><input id="email" type="email" name="email" required placeholder="Email@example.com">
-            </div>
-            <p class="font" for="email-id">Username</p>
-            <div class="username">
-                <label for="username"></label><input id="username" name="username" required placeholder="Username">
-            </div>
-            <p class="font">Password</p>
-            <div class="password" >
-                <label for="password"></label><input id="password" type="password" name = "password" required placeholder="Password"  >
-            </div>
-            <p class="font">Repeat password</p>
-            <div class="password" >
-                <label for="confirm_password"></label><input id="confirm_password" type="password" name = "confirm_password" required placeholder="Confirm Password">
-            </div>
-            <div class="nextbutton">
-                <button type = "submit" value="Submit" id="finish">Finish</button>
-            </div>
+    <header>
+        <img class="logo" src="../../../photos/logo.png" alt="img">
+        <p>HIC</p>
+    </header>
+    <main>
+        <div class="left">
+            <div class="up"><img src="../../../photos/up.png" alt=""></div>
+            <div class="down"><img src="../../../photos/BackGround_Green.png" alt=""></div>
+            <div class="doc"> <img src="../../../photos/bjishk.png" alt=""></div>
         </div>
-    </form>
-    <a href="../html/PractPage2.html">
-        <div class="out">
-            <div class="backbutton">
-                <input class="back" type="image" src="../../../photos/left-chevron.png" style="width: 20px; height: 20px; margin-top: 0;" alt="">
+        <form id="final-form" method="get">
+            <div class="right">
+                <p class="reg">Registration</p>
+                <p class="font">E-mail</p>
+                <div class="mail">
+                    <label for="email"></label><input id="email" type="email" name="email" required placeholder="Email@example.com">
+                </div>
+                <p class="font" for="email-id">Username</p>
+                <div class="username">
+                    <label for="username"></label><input id="username" name="username" required placeholder="Username">
+                </div>
+                <p class="font">Password</p>
+                <div class="password">
+                    <label for="password"></label><input id="password" type="password" name="password" required placeholder="Password">
+                </div>
+                <p class="font">Repeat password</p>
+                <div class="password">
+                    <label for="confirm_password"></label><input id="confirm_password" type="password" name="confirm_password" required placeholder="Confirm Password">
+                </div>
+                <div class="nextbutton">
+                    <button type="submit" value="Submit" id="finish">Finish</button>
+                </div>
             </div>
-        </div>
-    </a>
-</main>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="../js/Form3.js"></script>
-<script src="../js/TotalFormFirst.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
+        </form>
+        <a href="../html/PractPage2.html">
+            <div class="out">
+                <div class="backbutton">
+                    <input class="back" type="image" src="../../../photos/left-chevron.png" style="width: 20px; height: 20px; margin-top: 0;" alt="">
+                </div>
+            </div>
+        </a>
+    </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="../js/Form3.js"></script>
+    <script src="../js/TotalFormFirst.js"></script>
 
 </body>
+
 </html>
