add a thing in form

--- a/SuperAdmin/Registration/html/lastRegister.html
+++ b/SuperAdmin/Registration/html/lastRegister.html
@@ -18,7 +18,7 @@
         <div class="bl"> <img src="../../../photos/blue.jpg" alt=""></div>
         <div class="doc"><img src="../../../photos/doctor.png" alt="" ></div>
     </div>
-    <form action="../../LogIn/html/Login.html" id="final">
+    <form action="../../../Main/html/tick.html" id="final">
         <div class="right">
             <p class="reg">Register</p>
             <div class="telecom1">
