--- a/Practitioner/MainPage/html/VisitHistoryPage.html
+++ b/Practitioner/MainPage/html/VisitHistoryPage.html
@@ -1,56 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Title</title>
     <link href="../css/visitHistoryPage.css" rel="stylesheet" />
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <main>
-      <div class="row row1">
-        <div class="col-8">
-          <div class="logo-container">
-            <img class="logo" src="../../../photos/photoAnna/logo.png" alt="img" />
-            <p>HIC</p>
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="d-flex justify-content-end account-container">
-            <div class="p-2 accountPhotoName">
-              <img
-                src="../../../photos/woman.png"
-                class="rounded-circle accountPhoto"
-                class="accountPhoto"
-                id="accountPhoto"
-                alt="img"
-              
-              />
-              <span class="accountFullName">Ani Sahakyan</span>
-            </div>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+</head>
 
-            <div class="btn-group">
-              <img
-                class="btn dropdown-toggle"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-                src="../../../photos/photoAnna/settingsIcon.png"
-                alt="dropdown image"
-                data-toggle="dropdown"
-                class="img-responsive"
-              />
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Singe out</a></li>
+<body>
+    <main>
+        <div class="row row1">
+            <div class="col-8">
+                <div class="logo-container">
+                    <img class="logo" src="../../../photos/logoAnna.png" alt="img" />
+                    <p>HIC</p>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="d-flex justify-content-end account-container">
+                    <div class="p-2 accountPhotoName">
+                        <img src="../../../photos/woman.png" class="rounded-circle accountPhoto" class="accountPhoto" id="accountPhoto" alt="img" />
+                        <span class="accountFullName">Ani Sahakyan</span>
+                    </div>
+
+                    <div class="btn-group">
+                        <img class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" src="../../../photos/settingsIcon.png" alt="dropdown image" data-toggle="dropdown" class="img-responsive" />
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a class="dropdown-item" href="../html/change Password.html">Resset Password</a
+                  >
+                </li>
                 <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#">Reset Password</a></li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="../../LogIn/html/Practitioner Login.html"
+                    onclick="logout()"
+                    >Log out</a
+                  >
+                </li>
               </ul>
             </div>
           </div>
@@ -60,44 +52,58 @@
       <div class="row row2">
         <div class="col-4">
           <div class="card">
-            <img src="../../../photos/man.png" class="card-img-top patientPicture" alt="img" />
+            <img
+              src="../../../photos/man.png"
+              class="card-img-top patientPicture"
+              alt="img"
+            />
             <div class="card-body">
-              <p class="card-text">Full Name: Jhon Yengibaryan</p>
-              <p class="card-text">Gender: Male</p>
-              <p class="card-text">Date of birth: 20/07/1998</p>
-              <p class="card-text">Phone Number: +37400000000</p>
-              <p class="card-text">Address: Abovyan street</p>
+              <p class="card-text Full-name">Full Name: Jhon Yengibaryan</p>
+              <p class="card-text gender">Gender: Male</p>
+              <p class="card-text Date">Date of birth: 20/07/1998</p>
+              <p class="card-text Phone-number">Phone Number: +37400000000</p>
+              <p class="card-text Address">Address: Abovyan street</p>
             </div>
           </div>
         </div>
         <div class="col-8 right-col">
           <div class="visit">
             <p class="visitList">Visit List</p>
+            <button
+              onclick="document.location='visitFirst.html'"
+              class="addVisit"
+            >
+              + Add Visit
+            </button>
           </div>
           <div class="history">
             <p>Past Health</p>
-             <span>General: Relatively good
-              Infectious Diseases: Usual childhood illnesses. No history of rheumatic fever.
-              Immunizations: Flu vaccine yearly. Pneumovax 1996
-              Allergic to Penicillin-developed a diffuse rash after an injection 20 years ago.
-              Transfusions: 4 units received in 1980 for GI hemorrhage, transfusion complicated
-              by Hepatitis B infection. <br>
-              Hospitalizations, Operations, Injuries: <br>
-               1) Normal childbirth 48 years ago <br>
-               2) 1980 Gastrointestinal hemorrhage, see below <br>
-               3) 9/1995 chest pain- see history of present illlness </span>
+            <span
+              >General: Relatively good Infectious Diseases: Usual childhood
+              illnesses. No history of rheumatic fever. Immunizations: Flu
+              vaccine yearly. Pneumovax 1996 Allergic to Penicillin-developed a
+              diffuse rash after an injection 20 years ago. Transfusions: 4
+              units received in 1980 for GI hemorrhage, transfusion complicated
+              by Hepatitis B infection. <br />
+              Hospitalizations, Operations, Injuries: <br />
+              1) Normal childbirth 48 years ago <br />
+              2) 1980 Gastrointestinal hemorrhage, see below <br />
+              3) 9/1995 chest pain- see history of present illlness
+            </span>
 
-               <p>Current Regimen</p>
-               <span>
-                Digoxin 0.125mg once daily <br>
-                Enalapril 20mg twice daily <br>
-                Lasix 40mg once every other day <br>
-                Kcl 20mg once daily <br>
-                Tylenol 2 tabs twice daily as needed for arthritis</span>
+            <p>Current Regimen</p>
+            <span>
+              Digoxin 0.125mg once daily <br />
+              Enalapril 20mg twice daily <br />
+              Lasix 40mg once every other day <br />
+              Kcl 20mg once daily <br />
+              Tylenol 2 tabs twice daily as needed for arthritis</span
+            >
           </div>
         </div>
       </div>
     </main>
+    <script src="../js/visitHistoryPage.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
       crossorigin="anonymous"
