--- a/Practitioner/MainPage/html/registrationLast.html
+++ b/Practitioner/MainPage/html/registrationLast.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -8,144 +9,98 @@
     <link href="../css/registrationLast.css" rel="stylesheet" />
     <link href="../css/intlTelInput.css" rel="stylesheet" />
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+</head>
+
+<body>
     <main>
-      <div class="row">
-        <div class="col-md-4 col-sm-10">
-          <div class="logo-container">
-            <img class="logo" src="../../../photos/photoAnna/logo.png" alt="img" />
-            <p>HIC</p>
-          </div>
-          <div class="doctor-container">
-            <img src="../../../photos/photoAnna/patientDoctor.v2.png" alt="" />
-          </div>
-        </div>
+        <div class="row">
+            <div class="col-md-4 col-sm-10">
+                <div class="logo-container">
+                    <img class="logo" src="../../../photos/logoAnna.png" alt="img" />
+                    <p>HIC</p>
+                </div>
+                <div class="doctor-container">
+                    <img src="../../../photos/patientDoctorAnna.v2.png" alt="" />
+                </div>
+            </div>
 
-        <div class="col-md-6 col-sm-10 right-col">
-          <p class="reg">Registration</p>
-          <form id="final-form">
-            <div class="relatedPerson">
-              <p>Related Person</p>
+            <div class="col-md-6 col-sm-10 right-col">
+                <p class="reg">Registration</p>
+                <form id="final-form">
+                    <div class="relatedPerson">
+                        <p>Related Person</p>
 
-              <select
-                class="form-select w-50"
-                aria-label="Default select example"
-                id="relatedSelect"
-                required
-              >
-                <option selected >Select...</option>
-                <option value="Girlfrined/Boyfriend">Girlfriend/Boyfriend</option>
+                        <select class="form-select w-50" aria-label="Default select example" id="relatedSelect">
+                <option selected>Select...</option>
+                <option value="Girlfrined/Boyfriend">
+                  Girlfriend/Boyfriend
+                </option>
                 <option value="Husband/Wife">Husband/Wife</option>
                 <option value="Parent">Parent</option>
                 <option value="Friend">Friend</option>
               </select>
-            </div>
+                    </div>
 
-            <div class="name">
-              <p>Full name</p>
-              <div class="input-group mb-3 w-75">
-                <input
-                  id="relatedName"
-                  type="text"
-                  class="form-control"
-                  required
-                  placeholder="Name"
-                  aria-label="Name"
-                />
+                    <div class="name">
+                        <p>Full name</p>
+                        <div class="input-group mb-3 w-75">
+                            <input id="relatedName" type="text" class="form-control" placeholder="Name" aria-label="Name" />
 
-                <input
-                  id="relatedSurname"
-                  type="text"
-                  class="form-control"
-                  required
-                  placeholder="Surname"
-                  aria-label="Surname"
-                />
-              </div>
-            </div>
+                            <input id="relatedSurname" type="text" class="form-control" placeholder="Surname" aria-label="Surname" />
+                        </div>
+                    </div>
 
-            <div class="relatedgender">
-              <p>Gender</p>
-              <input name="gender" type="radio" id="male" value="yes" checked />
-              <label for="male">Male</label>
-              <input name="gender" type="radio" id="female" value="no" />
-              <label for="female">Female</label>
-              <input name="gender" type="radio" id="other" value="no" />
-              <label for="other">Other</label>
-            </div>
+                    <div class="relatedgender">
+                        <p>Gender</p>
+                        <input name="gender" type="radio" id="male" value="yes" checked />
+                        <label for="male">Male</label>
+                        <input name="gender" type="radio" id="female" value="no" />
+                        <label for="female">Female</label>
+                        <input name="gender" type="radio" id="other" value="no" />
+                        <label for="other">Other</label>
+                    </div>
 
-            <div class="contacts">
-              <p>Contacts</p>
+                    <div class="contacts">
+                        <p>Contacts</p>
 
-              <div class="input-group mb-3 w-75">
-                <span>Phone number</span>
-                <input
-                  id="relatedPhone"
-                  class="phone"
-                  name="phone"
-                  type="tel"
-                  class="form-control"
-                  required
-                  placeholder="Phone Number"
-                  aria-label="phone"
-                />
-                <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-              </div>
-              <div class="input-group mb-3 w-75">
-                <span>Email Address</span>
-                <input
-                  id="relatedEmail"
-                  type="text"
-                  class="form-control"
-                  required
-                  placeholder="Email address"
-                  aria-label="email"
-                />
-              </div>
-            </div>
+                        <div class="input-group mb-3 w-75">
+                            <span>Phone number</span>
+                            <input id="relatedPhone" class="phone" name="phone" type="tel" class="form-control" placeholder="Phone Number" aria-label="phone" />
+                            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+                        </div>
+                        <div class="input-group mb-3 w-75">
+                            <span>Email Address</span>
+                            <input id="relatedEmail" type="text" class="form-control" placeholder="Email address" aria-label="email" />
+                        </div>
+                    </div>
 
-            <div class="organization">
-              <p>Organization(If needed)</p>
-              <div class="input-group mb-3 w-75">
-                <input
-                  id="organization"
-                  type="text"
-                  class="form-control"
-                  placeholder="Name of Organization"
-                  aria-label="nameOfOrganization"
-                />
-              </div>
-            </div>
+                    <div class="organization">
+                        <p>Organization(If needed)</p>
+                        <div class="input-group mb-3 w-75">
+                            <input id="organization" type="text" class="form-control" placeholder="Name of Organization" aria-label="nameOfOrganization" />
+                        </div>
+                    </div>
 
-            <div class="buttons">
-              <img  class="back-button" src="../../../photos/back.png" alt="back icon" 
-              onclick="document.location='registrationThird.html'" >
-              <div class="finish">
-                <button class="btn btn-primary me-md-2" type="submit">
+                    <div class="buttons">
+                        <img class="back-button" src="../../../photos/back.png" alt="back icon" onclick="document.location='registrationThird.html'" />
+                        <div class="finish">
+                            <button class="btn btn-primary me-md-2" type="submit" src="../../../Main/html/tick.html">
                   Finish
                 </button>
+                        </div>
+                    </div>
+                </form>
             </div>
-
-            </div>
-          </form>
         </div>
-      </div>
     </main>
 
     <script src="../js/intlTelInput.js"></script>
     <script src="../js/phone.js"></script>
     <script src="../js/registrationLast.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    <script src="../js/js.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+</body>
+
 </html>
