--- a/Practitioner/MainPage/html/change Password.html
+++ b/Practitioner/MainPage/html/change Password.html
@@ -17,7 +17,7 @@
                 <ul id="buttons">
                     <li id="photo"><a href="">
                         <div>
-                            <img  src=""  id="profile_pic" class="photo" alt="no photo">
+                            <img  src="../../../photos/woman.png"  id="profile_pic" class="photo" alt="no photo">
                         </div>
                     </a></li>
                     <li id="name_surname"><a href="" id="profile_name">
