--- a/SuperAdmin/Pract Registration/html/PractPage1.html
+++ b/SuperAdmin/Pract Registration/html/PractPage1.html
@@ -17,7 +17,7 @@
             <div class="down"><img  src="../../../photos/BackGround_Green.png" alt=""></div>
             <div class="doc"> <img  src="../../../photos/bjishk.png" alt=""></div>
         </div>
-        <form id="myForm" name="myForm" method="get" action="PractPage2.html" >
+        <form id="myForm" name="myForm" method="get" action="" >
         <div class="right">
             <p class="reg">Registration</p>
                 <div class="pic" id="picture">
