--- a/SuperAdmin/Pract Registration/html/PractPage2.html
+++ b/SuperAdmin/Pract Registration/html/PractPage2.html
@@ -3,70 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/pracStyle2.css">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/css/select2.min.css">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/0.8.2/css/flag-icon.min.css">
+    <link rel="stylesheet" href="../css/pracStyle3.css">
 </head>
 <body>
-    <header>
-        <img class="logo" src="../../../photos/logo.png" alt="img">
-        <p>HIC</p>
-    </header>
-    <main>
-        <div class="left">
-            <div class="up"><img  src="../../../photos/up.png" alt=""></div>
-            <div class="down"><img  src="../../../photos/BackGround_Green.png" alt=""></div>
-            <div class="doc"> <img  src="../../../photos/bjishk.png" alt=""></div>
-        </div>
-        <form id="form" method="get" action="PractPage3.html">
+<header>
+    <img class="logo" src="../../../photos/logo.png" alt="img">
+    <p>HIC</p>
+</header>
+<main>
+    <div class="left">
+        <div class="up"><img  src="../../../photos/up.png" alt=""></div>
+        <div class="down"><img  src="../../../photos/BackGround_Green.png" alt=""></div>
+        <div class="doc"> <img  src="../../../photos/bjishk.png" alt=""></div>
+    </div>
+    <form id="final-form" method="get">
         <div class="right">
             <p class="reg">Registration</p>
-                <div class="address">
-                    <p class="adr">Adress</p>
-                </div>
-                    <div class="address">
-                        <div class="titles">
-                            <p>Country</p>
-                            <p>City</p>
-                            <p>State</p>
-                            <p>District</p>
-                            <p>Street</p>
-                            <p>Postal Code</p>
-                        </div>
-                        <div class="inputs">
-                            <div><label for="country"></label><select id="country" name="country" required aria-placeholder="Select a country" ></select></div>
-                            <div class="city"><label for="city"></label><input type="text" id="city" name = "city" required placeholder="City" ></div>
-                            <div><label for="state"></label><input type="text" id="state" name = "state" required placeholder="State" ></div>
-                            <div><label for="district"></label><input type="text" id="district" name = "district" required placeholder="District" ></div>
-                            <div><label for="street"></label><input type="text" id="street" name = "street" required placeholder="Street" ></div>
-                            <div><label for="postalcode"></label><input type="text" id="postalcode" name = "postalcode" required placeholder="Postal Code" ></div>
-                        </div>
-                    </div>
-                    <div class="year">
-                        <p class="yr">Qualification</p>
-                        <label for="ddlYears1"></label><select id="ddlYears1" required ></select>
-                        <label for="ddlYears2"></label><select id="ddlYears2" required ></select>
-                    </div>
-                        <div class="buttons">
-                            <div class="nextbutton">
-                                <button>Next</button>
-                            </div>
-                        </div>
+            <p class="font">E-mail</p>
+            <div class="mail">
+                <label for="email"></label><input id="email" type="email" name="email" required placeholder="Email@example.com">
             </div>
-        </form>
-        <a href="../html/PractPage1.html">
-            <div class="out">
-                <div class="backbutton">
-                    <input class="back" type="image" src="../../../photos/left-chevron.png" style="width: 20px; height: 20px; margin-top: 0;" alt="">
-                </div>
+            <p class="font" for="email-id">Username</p>
+            <div class="username">
+                <label for="username"></label><input id="username" name="username" required placeholder="Username">
             </div>
-        </a>
-        
-    </main>
-    <script src="../js/year.js"></script>
-    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js"></script>
-    <script src="../js/address.js"></script>
-    <script src="../js/Form2.js"></script>
+            <p class="font">Password</p>
+            <div class="password" >
+                <label onmouseover="enabel()"  for="password"></label><input id="password" type="password" name = "password" required placeholder="Password"  >
+            </div>
+            <p class="font">Repeat password</p>
+            <div class="password" >
+                <label onmouseover="enabel()" for="confirm_password"></label><input id="confirm_password" type="password" name = "confirm_password" required placeholder="Confirm Password">
+                <span id = "messageOk" style="color:green"></span>
+                <span id = "messageNot" style="color:red"></span>
+            </div>
+            <div class="nextbutton">
+                <button type = "submit" onclick="coPassword()" value="Submit" id="finish">Finish</button>
+            </div>
+        </div>
+    </form>
+    <a href="../html/PractPage2.html">
+        <div class="out">
+            <div class="backbutton">
+                <input class="back" type="image" src="../../../photos/left-chevron.png" style="width: 20px; height: 20px; margin-top: 0;" alt="">
+            </div>
+        </div>
+    </a>
+</main>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="../js/Form3.js"></script>
+<script src="../js/TotalFormFirst.js"></script>
+<script src="../js/Pass.Pract3.js"></script>
 </body>
 </html>
