--- a/SuperAdmin/Pract Registration/html/PractPage3.html
+++ b/SuperAdmin/Pract Registration/html/PractPage3.html
@@ -40,7 +40,10 @@
                     <label for="confirm_password"></label><input id="confirm_password" type="password" name="confirm_password" required placeholder="Confirm Password">
                 </div>
                 <div class="nextbutton">
-                    <button type="submit" value="Submit" id="finish">Finish</button>
+                    <a href="../../../Main/html/tick.html">
+                        <button type="submit" value="Submit" id="finish">Finish</button>
+                    </a>
+                    
                 </div>
             </div>
         </form>
