final cahnges before exam

--- a/Practitioner/MainPage/html/change Password.html
+++ b/Practitioner/MainPage/html/change Password.html
@@ -34,7 +34,7 @@
         <div id="for_button">
             <div id="bg">
                 <div>
-                    <img id="user_pic" class="photo" src="" alt="no photo">
+                    <img id="user_pic" class="photo" src="../../../photos/woman.png" alt="no photo">
                 </div>
                 <div id="info">
                     <nav>
