--- a/SuperAdmin/Registration/html/lastRegister.html
+++ b/SuperAdmin/Registration/html/lastRegister.html
@@ -54,6 +54,7 @@
 </main>
 <script src="../js/LastReg.data.js"></script>
 <script src="../js/Org _Last_Vist.js"></script>
+<script src="../js/"></script>
 
 </body>
 </html>
